# task-genie

./: .dockerignore  .env.example  .gitignore  README.md  TODO.md  package-lock.json  package.json  zform.ts
backend/: .env.example  package-lock.json  package.json  tsconfig.json
backend/agents/workItemAgent/: Dockerfile  agent.test.ts  agent.ts  jest.config.js  package-lock.json  package.json  prompt.py  prompt.ts  pyproject.toml  setupTests.ts  tsconfig.json
backend/agents/workItemAgent/services/: __init__.py  azure_service.py  bedrock_service.py  cloudwatch_service.py
backend/agents/workItemAgent/src/: agent.py
backend/agents/workItemAgent/tools/: __init__.py  agent-tools.ts  agent_tools.py  azure-devops-tools.ts  azure_devops_tools.py  bedrock-tools.ts  bedrock_tools.py  cloudwatch_tools.py  schemas.ts
conductor/: product-guidelines.md  product.md  tech-stack.md  tracks.md  workflow.md
docs/: Cost Estimates.xlsx  api-sidebars.ts  docusaurus.config.ts  feedback-learning-system.md  github-actions-setup.md  package-lock.json  package.json  sidebars.ts
extension/: my-hub.html  package.json  user-story-button.html  vss-extension.json
frontend/: .env.example  next.config.ts  package-lock.json  package.json  pnpm-lock.yaml
frontend2/: package-lock.json  package.json
infrastructure/: .env.example  cdk.context.json  cdk.json  jest.config.js  package-lock.json  package.json  tsconfig.json
lib/: task-genie-stack.ts
resources/: DMEDProductBacklogItemCreatedEvent.json  EpicCreatedEvent.json  EpicUpdatedEvent.json  FeatureCreatedEvent.json  fields.txt  (+4 more)
(+262 files in other folders)
